# WikiSpeedRunner

./: .gitignore  README.md  main.py  pyproject.toml
core/: embeddings.py  wiki_client.py
players/: llm.py  player.py  sbert_vectorized.py
visualisation/: browser_runner.py
