[project]
name = "wikispeedrunner"
version = "0.1.0"
description = "Automated Wikipedia Speed Runner"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
    "ollama>=0.6.1",
    "playwright>=1.56.0",
    "sentence-transformers>=5.1.2",
    "wikipedia-api>=0.8.1",
]
