[project]
name = "wikispeedrunner"
version = "0.1.0"
description = "Automated Wikipedia Speed Runner"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.52.0",
    "numpy>=2.3.5",
    "playwright>=1.56.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "wikipedia-api>=0.8.1",
]
